--- a/src/input.css
+++ b/src/input.css
@@ -12,7 +12,7 @@
 
 @media only screen and (max-width: 414px) {
   .bg-hero {
-    background-image: url("../assets/bgmobile.png");
+    background-image: url("../assets/bgmobile2.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
