--- a/src/input.css
+++ b/src/input.css
@@ -10,9 +10,9 @@
   background-size: cover;
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 600px) {
   .bg-hero {
-    background-image: url("../assets/bgmobile.png");
+    background-image: url("../assets/bgmobile2.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
