--- a/src/input.css
+++ b/src/input.css
@@ -5,21 +5,21 @@
 .bg-hero {
   height: 100vh;
   color: #fff;
-  background-image: url("../assets/Group 4.png");
+  background-image: url("../assets/bg-2.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 @media only screen and (max-width: 600px) {
   .bg-hero {
-    background-image: url("../assets/bgmobile2.png");
+    background-image: url("../assets/bg-3.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
 }
 
-.footer {
-  background-image: url("../assets/Group 4.png");
+.foo {
+  background-image: url("../assets/bg-4.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
